[package]
name = "assembly"
version = "0.1.0"
authors = ["Hans Niklas Jacob <hnj@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "1.5"
log = { version = "0.4", features = ["compile_time_filters"] }
